[gd_scene load_steps=3 format=3 uid="uid://bvmrgcjk43qtb"]

[ext_resource type="Script" path="res://ui/pause_menu_ui.gd" id="1_pbi13"]
[ext_resource type="PackedScene" uid="uid://b825y76mftvgw" path="res://ui/settings_menu.tscn" id="3_rjdwr"]

[node name="PauseMenuUi" type="Control" node_paths=PackedStringArray("pause_menu", "settings_menu")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pbi13")
pause_menu = NodePath("MarginContainer/PauseMenu")
settings_menu = NodePath("MarginContainer/SettingsMenu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenu" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PauseMenu"]
layout_mode = 2
offset_right = 1720.0
offset_bottom = 880.0

[node name="Resume Button" type="Button" parent="MarginContainer/PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Resume"

[node name="Settings Button" type="Button" parent="MarginContainer/PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Settings"

[node name="Quit Button" type="Button" parent="MarginContainer/PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit to Main Menu"

[node name="SettingsMenu" parent="MarginContainer" instance=ExtResource("3_rjdwr")]
visible = false
layout_mode = 2

[connection signal="pressed" from="MarginContainer/PauseMenu/VBoxContainer/Resume Button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/PauseMenu/VBoxContainer/Settings Button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/SettingsMenu/VBoxContainer/VBoxContainer/Back Button" to="." method="_on_settings_back_button_pressed"]

[editable path="MarginContainer/SettingsMenu"]
